--- a/Exam/MVC/MyCheckedList/MyCheckedList/appsettings.json
+++ b/Exam/MVC/MyCheckedList/MyCheckedList/appsettings.json
@@ -6,5 +6,8 @@
         }
     },
     "AllowedHosts": "*",
-    "AppName": "aaaaaaa"
+    "ConnectionStrings": {
+        "SqlLiteConnection": "Data Source=mycheckedlist.db;",
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyCheckedListApplication;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
 }
