Add .NET Framework project

--- a/Exam/MVC/MyCheckedList/MyCheckedList/appsettings.json
+++ b/Exam/MVC/MyCheckedList/MyCheckedList/appsettings.json
@@ -8,6 +8,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SqlLiteConnection": "Data Source=mycheckedlist.db;",
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyCheckedListApplication;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyCheckList;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
